# dofus-mitm-dll

./: CMakeLists.txt  README.md  get_request_packets_id.py  packets.norg  vcpkg-configuration.json
dll/include/: APacket.hpp  BasicAckPacket.hpp  BasicPingPacket.hpp  BasicPongPacket.hpp  ChatMessagePacket.hpp  GameContextRemoveElementPacket.hpp  HookEngine.h  MapFightCountPacket.hpp  MapMovementPacket.hpp  MultiTabStoragePacket.hpp  NoMovementPacket.hpp  ObjectEffect.hpp  ObjectItem.hpp  PacketIds.hpp  PlayerInventoryPacket.hpp  UnknownPacket.hpp  Utils.hpp
dll/include/packets/: APacket.hpp  AReceivedPacket.hpp  ASentPacket.hpp  IPacket.hpp  PacketIds.hpp  PacketNames.hpp  ReceivedPacketNames.hpp  SentPacketNames.hpp
dll/include/packets/factory/: PacketFactory.hpp
dll/include/packets/impl/: BasicAckPacket.hpp  BasicPingPacket.hpp  BasicPongPacket.hpp  ChatMessagePacket.hpp  ContainerInventoryPacket.hpp  ExchangeBidHouseSearchMessage.hpp  GameContextRemoveElementPacket.hpp  MapFightCountPacket.hpp  MapMovementPacket.hpp  MultiTabStoragePacket.hpp  NoMovementPacket.hpp  PlayerInventoryPacket.hpp  UnknownPacket.hpp
dll/src/: BasicAckPacket.cpp  BasicPingPacket.cpp  BasicPongPacket.cpp  ChatMessagePacket.cpp  GameContextRemoveElementPacket.cpp  HookEngine.cpp  MapFightCountPacket.cpp  MapMovementPacket.cpp  MultiTabStoragePacket.cpp  NoMovementPacket.cpp  ObjectEffect.cpp  ObjectItem.cpp  PlayerInventoryPacket.cpp  UnknownPacket.cpp  Utils.cpp  main.cpp
dll/src/packets/: PacketNames.cpp  ReceivedPacketNames.cpp  SentPacketNames.cpp
dll/src/packets/impl/: BasicAckPacket.cpp  BasicPingPacket.cpp  BasicPongPacket.cpp  ChatMessagePacket.cpp  ContainerInventoryPacket.cpp  ExchangeBidHouseSearchMessage.cpp  GameContextRemoveElementPacket.cpp  MapFightCountPacket.cpp  MapMovementPacket.cpp  MultiTabStoragePacket.cpp  NoMovementPacket.cpp  PlayerInventoryPacket.cpp  UnknownPacket.cpp
injector/src/: main.cpp
